plugins {
    id 'org.spongepowered.gradle.vanilla' version '0.2.1-SNAPSHOT'
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'idea'
    version = modVersion
    group = mavenGroup

}

subprojects {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8

    repositories {
        mavenCentral()
        maven { url "https://repo.spongepowered.org/repository/maven-public/"}
    }

    tasks.withType(GenerateModuleMetadata) {
        enabled = false
    }
}

minecraft {
    version(minecraftVersion)
}

dependencies {
    compileOnly group:'org.spongepowered', name:'mixin', version: mixinVersion
    compileOnlyApi("org.jetbrains:annotations:${project.JBAnnotationsVersion}")
}

sourceSets {
    main {
        resources {
            srcDirs += [
                    "src/main/generated"
            ]
        }
    }
}
